--- a/calculate-app/package.json
+++ b/calculate-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://agaligoo.github.io/Caculator",
+  "homepage" : "http://agaligoo.github.io/Calculator",
   "name": "calculate-app",
   "version": "0.1.0",
   "private": true,
